# AEGIS

./: .gitignore  LICENSE  README.md  dashboard_preview.html  pyproject.toml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  RESOURCES.md
src/aegis/: __init__.py  cli.py  platform.py
src/aegis/analytics/: __init__.py  autoencoder.py  baseline.py  engine.py  features.py  isolation_forest.py
src/aegis/api/: __init__.py  dashboard.py  demo.py  server.py
src/aegis/core/: config.py  schema.py
src/aegis/crypto/: __init__.py  audit_chain.py  pqc.py  vault.py
src/aegis/data/: cert_loader.py  generator.py
src/aegis/detection/: __init__.py  mitre.py  rules.py
src/aegis/events/: __init__.py  generator.py
src/aegis/pam/: __init__.py  access.py  jit.py
src/aegis/risk/: __init__.py  engine.py
tests/: conftest.py  test_analytics.py  test_api_smoke.py  test_crypto.py  test_data_and_platform.py  test_detection.py  test_pam_risk.py  test_pqc_backends.py
